third_party/move/move-compiler-v2/tests/bytecode-generator/control_flow/break_continue_outside_loop.exp

Diagnostics:
warning: Unnecessary trailing semicolon
  ┌─ tests/bytecode-generator/control_flow/break_continue_outside_loop.move:3:7
  │
3 │     break;
  │     -----^
  │     │    │
  │     │    A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon.
  │     Any code after this expression will not be reached

warning: Unnecessary trailing semicolon
  ┌─ tests/bytecode-generator/control_flow/break_continue_outside_loop.move:7:10
  │
7 │     continue;
  │     --------^
  │     │       │
  │     │       A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon.
  │     Any code after this expression will not be reached

// -- Model dump before bytecode pipeline
module 0xc0ffee::m {
    public fun broken() {
        break;
        Tuple()
    }
    public fun continued() {
        continue;
        Tuple()
    }
} // end 0xc0ffee::m


Diagnostics:
error: missing enclosing loop statement
  ┌─ tests/bytecode-generator/control_flow/break_continue_outside_loop.move:3:2
  │
3 │     break;
  │     ^^^^^

error: missing enclosing loop statement
  ┌─ tests/bytecode-generator/control_flow/break_continue_outside_loop.move:7:2
  │
7 │     continue;
  │     ^^^^^^^^
