third_party/move/move-compiler-v2/tests/bytecode-generator/control_flow/break_continue_outside_loop.move
module 0xc0ffee::m {
    public fun broken() {
	break;
    }

    public fun continued() {
	continue;
    }
}
